--- a/public/css/scss/test.scss
+++ b/public/css/scss/test.scss
@@ -1,3 +1,19 @@
+//設定變數 $開頭
+$primary-color:rgba(250, 239, 85, 0.479);
 body{
-    background-color: rgb(255, 247, 138);
+    color: rgb(255, 0, 0);
+    font-family: Impact, 微軟正黑體;
+    background-color: $primary-color;
+}
+.btn-primary{
+    background-color: rgb(0, 0, 0);
+    color: $primary-color;
+    padding: 10px;
+    border-radius: 8px;
+    text-decoration: none;
+    letter-spacing: 3px;
+}
+.btn-primary:hover{
+    background-color: rgb(80, 80, 80);
+    color: brown;
 }
