--- a/public/css/test.css
+++ b/public/css/test.css
@@ -18,3 +18,11 @@ body {
   background-color: #505050;
   color: brown;
 }
+
+.S1 {
+  transform: rotate(30deg);
+}
+
+.S1:hover {
+  transform: rotate(60deg);
+}
