--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -1,4 +1,40 @@
+$primary-color:rgb(141, 67, 17);
+
+h1,ul{
+    margin: 0;
+    padding: 0;
+}
+ul{
+    list-style-type: none;
+}
 body{
     margin: 0;
-    background-color: rgb(255, 126, 126);
+    // background-color: rgb(255, 126, 126);
+}
+header{
+    // background-color: rgb(203, 249, 255);
+}
+header>div>h1{
+    padding-left: 30px;
+    color:rgb(255, 145, 0)
+}
+.container{
+    margin: auto;
+    width: 80%;
+    max-width: 1140px;
+}
+header>div>nav>ul{
+    display: flex;
+     justify-content: center;
+}
+header>div>nav>ul>li{
+    margin:30px;
+    text-align: center;    
+}
+header>div>nav>ul>li>a{
+    text-decoration: none;
+    line-height: 30px;
+    color:$primary-color;
+    font-size: 1.2em;
+    letter-spacing: 2px;
 }
