--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -7,22 +7,27 @@ h1,ul{
 ul{
     list-style-type: none;
 }
-body{
-    margin: 0;
-    // background-color: rgb(255, 126, 126);
-}
-header{
-    // background-color: rgb(203, 249, 255);
-}
-header>div>h1{
-    padding-left: 30px;
-    color:rgb(255, 145, 0)
-}
 .container{
     margin: auto;
     width: 80%;
     max-width: 1140px;
 }
+body{
+    margin: 0;
+    // background-color: rgb(255, 126, 126);
+}
+//===========================================================
+// 頁首
+//============================================================
+
+header{
+    background-color: rgb(203, 249, 255);
+}
+header>div>h1{
+    padding-left: 30px;
+    color:rgb(255, 145, 0)
+}
+
 header>div>nav>ul{
     display: flex;
      justify-content: center;
