--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -21,25 +21,59 @@ body{
 //============================================================
 
 header{
-    background-color: rgb(203, 249, 255);
+    // background-color: rgb(203, 249, 255);
 }
 header>div>h1{
     padding-left: 30px;
-    color:rgb(255, 145, 0)
+    color:$primary-color;
 }
-
 header>div>nav>ul{
     display: flex;
-     justify-content: center;
+    justify-content: center;
 }
 header>div>nav>ul>li{
     margin:30px;
-    text-align: center;    
 }
 header>div>nav>ul>li>a{
+    padding: 10px;
     text-decoration: none;
     line-height: 30px;
     color:$primary-color;
     font-size: 1.2em;
     letter-spacing: 2px;
+    border-radius: 10px;
+    text-align: center;   
+    border: 1px solid rgb(0, 0, 0); 
+    box-sizing: border-box;
+}
+header>div>nav>ul>li>a:hover{
+    background-color: rgb(124, 147, 250);
+    color:aliceblue;
+}
+//============================================================
+// 大圖內容
+//============================================================
+
+//============================================================
+// 內容
+//============================================================
+.container>h1{
+    color: $primary-color;
+}
+.img-fluid{
+    width: 100%;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.col-4{
+    width: 33.3%;
+}
+.col-4>p{
+    text-align: center;
+}
+.col-4>p>a{
+    text-decoration: none;
 }
