--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -21,7 +21,7 @@ body{
 //============================================================
 
 header{
-    // background-color: rgb(203, 249, 255);
+     background-color: rgb(203, 249, 255);
 }
 header>div>h1{
     margin-top: 10px;
@@ -46,6 +46,7 @@ header>div>nav>ul>li>a{
     text-align: center;   
     border: 1px solid rgb(0, 0, 0); 
     box-sizing: border-box;
+    box-shadow: 0 3px;
 }
 header>div>nav>ul>li>a:hover{
     background-color: rgb(124, 147, 250);
