--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@ body {
   margin: 0;
 }
 
+header {
+  background-color: #cbf9ff;
+}
+
 header > div > h1 {
   margin-top: 10px;
   padding-left: 30px;
@@ -43,6 +47,7 @@ header > div > nav > ul > li > a {
   text-align: center;
   border: 1px solid black;
   box-sizing: border-box;
+  box-shadow: 0 3px;
 }
 
 header > div > nav > ul > li > a:hover {
