--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -1,6 +1,6 @@
 $primary-color:rgb(141, 67, 17);
 
-h1,h2,ul{
+h1,h2,ul,dd{
     margin: 0;
     padding: 0;
 }
@@ -24,7 +24,7 @@ header{
      background-color: rgb(203, 249, 255);
 }
 header>div>h1{
-    margin-top: 10px;
+    padding-top: 10px;
     padding-left: 30px;
     color:$primary-color;
 }
@@ -33,7 +33,8 @@ header>div>nav>ul{
     justify-content: center;
 }
 header>div>nav>ul>li{
-    margin:30px;
+    margin:25px;
+    
 }
 header>div>nav>ul>li>a{
     padding: 10px;
@@ -46,7 +47,8 @@ header>div>nav>ul>li>a{
     text-align: center;   
     border: 1px solid rgb(0, 0, 0); 
     box-sizing: border-box;
-    box-shadow: 0 3px;
+    box-shadow: 2px 2px;
+    font-weight: 800;
 }
 header>div>nav>ul>li>a:hover{
     background-color: rgb(124, 147, 250);
@@ -69,7 +71,7 @@ header>div>nav>ul>li>a:hover{
 .img-fluid{
     width: 100%;
 }
-.ing-rounded{
+.img-rounded{
     border-radius: 8px;
 }
 // 文字相關
@@ -82,6 +84,11 @@ header>div>nav>ul>li>a:hover{
     justify-content: space-between;
     flex-wrap: wrap;
 }
+.col-3{
+    width: calc(100% / 4 - 30px);
+    margin: 0px 15px 40px 15px;
+    // 上右下左
+}
 .col-4{
     width: calc(100% / 3 - 30px);
     margin: 0px 15px 40px 15px;
@@ -89,4 +96,28 @@ header>div>nav>ul>li>a:hover{
 }
 .col-4>p>a{
     text-decoration: none;
+}
+.title a{
+    color:brown;
+    font-size: 1.3em;
+    font-weight: 800;
+}
+.date{
+    color:$primary-color;
+}
+footer{
+    background-color: rgb(251, 255, 196);
+    padding: 40px 40px 0 40px;
+}
+dt{
+    font-size: 1.2em;
+    color: $primary-color;
+    margin-bottom: 10px;
+}
+dd{
+    margin-bottom: 5px;
+}
+dd>a{
+    text-decoration: none;
+    color: rgb(41, 41, 41);
 }
