--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ header > div > nav > ul > li > a {
   text-align: center;
   border: 1px solid black;
   box-sizing: border-box;
-  box-shadow: 2px 2px;
+  box-shadow: 2px 2px 3px #636363;
   font-weight: 800;
 }
 
