--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -47,7 +47,7 @@ header>div>nav>ul>li>a{
     text-align: center;   
     border: 1px solid rgb(0, 0, 0); 
     box-sizing: border-box;
-    box-shadow: 2px 2px;
+    box-shadow: 2px 2px 3px rgb(99, 99, 99);
     font-weight: 800;
 }
 header>div>nav>ul>li>a:hover{
