--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ header > div > h1 {
   color: #8d4311;
 }
 
+header > div > h1 > a {
+  text-decoration: none;
+}
+
 header > div > nav > ul {
   display: flex;
   justify-content: center;
@@ -123,4 +127,17 @@ dd {
 dd > a {
   text-decoration: none;
   color: #292929;
+}
+
+section > .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+section > .container > .leftbox {
+  width: 150px;
+}
+
+section > h2 {
+  position: relative;
 }
