--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -30,6 +30,7 @@ header>div>h1{
 }
 header>div>h1>a{
     text-decoration: none;
+    color:$primary-color;
 }
 header>div>nav>ul{
     display: flex;
@@ -127,10 +128,31 @@ dd>a{
 // ============平面作品=====================
 // ============平面作品=====================
 // ============平面作品=====================
+section>.topbar>a{
+    text-decoration: none;
+}
+
 section>.container{
     display: flex;
     justify-content: space-between;
 }
 section>.container>.leftbox{
     width: 150px;
+}
+section>.container>.leftbox>dl>dt>a{
+    text-decoration: none;
+    border: 1px solid rgb(255, 136, 0);
+    background-color: rgb(255, 215, 177);
+    border-radius: 8px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+section>.container>.leftbox>dl>dt>a:hover{
+    background-color: rgb(63, 18, 1);
+    color:aliceblue;
+}
+section>.container>.rightbox>h2{
+    margin-left: 20px;
+    margin-bottom: 10px;
+    color:$primary-color;
 }
