--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@ header > div > h1 {
 
 header > div > h1 > a {
   text-decoration: none;
+  color: #8d4311;
 }
 
 header > div > nav > ul {
@@ -129,6 +130,10 @@ dd > a {
   color: #292929;
 }
 
+section > .topbar > a {
+  text-decoration: none;
+}
+
 section > .container {
   display: flex;
   justify-content: space-between;
@@ -136,4 +141,24 @@ section > .container {
 
 section > .container > .leftbox {
   width: 150px;
+}
+
+section > .container > .leftbox > dl > dt > a {
+  text-decoration: none;
+  border: 1px solid #ff8800;
+  background-color: #ffd7b1;
+  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+section > .container > .leftbox > dl > dt > a:hover {
+  background-color: #3f1201;
+  color: aliceblue;
+}
+
+section > .container > .rightbox > h2 {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  color: #8d4311;
 }
