--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,26 +115,31 @@ footer {
   padding: 40px 40px 0 40px;
 }
 
-dt {
+footer dt {
   font-size: 1.2em;
   color: #8d4311;
   margin-bottom: 10px;
 }
 
-dd {
+footer dd {
   margin-bottom: 5px;
 }
 
-dd > a {
+footer a {
   text-decoration: none;
   color: #292929;
+}
+
+section > .topbar {
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 section > .topbar > a {
   text-decoration: none;
 }
 
-section > .container {
+.S2 > .container {
   display: flex;
   justify-content: space-between;
 }
@@ -143,13 +148,16 @@ section > .container > .leftbox {
   width: 150px;
 }
 
+section > .container > .leftbox > dl > dt {
+  margin-bottom: 20px;
+}
+
 section > .container > .leftbox > dl > dt > a {
   text-decoration: none;
   border: 1px solid #ff8800;
   background-color: #ffd7b1;
   border-radius: 8px;
   padding: 5px;
-  margin-bottom: 10px;
 }
 
 section > .container > .leftbox > dl > dt > a:hover {
