--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -141,7 +141,10 @@ footer a{
     justify-content: space-between;
 }
 .S2>.container>.leftbox{
-    width: 150px;
+    width: 20%;
+}
+.S2>.container>.rightbox{
+    width: 80%;
 }
 .S2>.container>.leftbox>dl>dt{
     margin-bottom: 20px;
