--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -172,6 +172,7 @@ footer a{
 }
 .S2>.container>.rightbox>.row>.col-4>a{
     display: block;
+    border-radius: 8px;
     overflow:hidden;
 }
 .S2>.container>.rightbox img{
