--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,6 +184,7 @@ footer a {
 
 .S2 > .container > .rightbox > .row > .col-4 > a {
   display: block;
+  border-radius: 8px;
   overflow: hidden;
 }
 
