--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -99,6 +99,10 @@ header>div>nav>ul>li>a:hover{
     margin: 0px 15px 40px 15px;
     // 上右下左
 }
+.col-8{
+    width: calc(100% / 1.5 -30px);
+    margin: 0px 15px 40px 15px;
+}
 .col-4>p>a{
     text-decoration: none;
 }
@@ -180,4 +184,27 @@ footer a{
 }
 .S2>.container>.rightbox img:hover{
     transform: scale(1.5);
+}
+//======================上課內容=============
+.container>.row>.breadcrumb{
+    width: 100%;
+}
+.container>.row>.breadcrumb>a{
+    text-decoration: none;
+    color: #000;
+}
+.container>.row>.breadcrumb>a:hover{
+    color: blue;
+}
+.w-20{
+    width: 20%;
+    background-color: rgb(255, 241, 164);
+}
+.w-80{
+    width: 80%;
+    background-color: rgb(255, 153, 0);
+}
+.container>.row>.col-9>.row>.col-4>a{
+    display: block;
+    text-decoration: none;
 }
