--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -196,13 +196,11 @@ footer a{
 .container>.row>.breadcrumb>a:hover{
     color: blue;
 }
-.w-20{
+.container>.row>.col-4{
     width: 20%;
-    background-color: rgb(255, 241, 164);
 }
-.w-80{
+.container>.row>.col-8{
     width: 80%;
-    background-color: rgb(255, 153, 0);
 }
 .container>.row>.col-8>.row>.col-4>a{
     display: block;
