--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,8 +98,8 @@ header > div > nav > ul > li > a:hover {
   margin: 0px 15px 40px 15px;
 }
 
-.col-8 {
-  width: calc(100% / 1.5 - 30px);
+.col-9 {
+  width: calc(100% / 1.333333333 - 30px);
   margin: 0px 15px 40px 15px;
 }
 
@@ -214,11 +214,6 @@ footer a {
   color: blue;
 }
 
-.container > .row > .col-4 {
-  width: 20%;
-  margin: 0;
-}
-
 .btn-primary {
   background-color: #fca70a;
   padding: 5px;
@@ -227,6 +222,7 @@ footer a {
   border-radius: 8px;
   text-align: center;
   box-shadow: 1px 1px 1px #a8a8a8;
+  box-sizing: border-box;
   text-decoration: none;
   display: block;
   border-radius: 8px;
@@ -239,12 +235,20 @@ footer a {
   color: #ff6600;
 }
 
-.container > .row > .col-8 {
-  width: 80%;
-  margin: 0;
+.container > .row > .col-9 > .row > .col-4 {
+  border-radius: 8px;
+  overflow: hidden;
 }
 
-.container > .row > .col-8 > .row > .col-4 > a {
+.container > .row > .col-9 > .row > .col-4 > a {
   display: block;
   text-decoration: none;
+}
+
+.container > .row > .col-9 > .row > .col-4 > img {
+  transition: all 1s;
+}
+
+.container > .row > .col-9 > .row > .col-4 > img:hover {
+  transform: scale(1.3);
 }
