--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,8 +241,11 @@ footer a {
 }
 
 .container > .row > .col-9 > .row > .col-4 > a {
+  margin: 0;
+  padding: 0;
   display: block;
   text-decoration: none;
+  background-color: #fcd670;
 }
 
 .container > .row > .col-9 > .row > .col-4 > img {
