--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,13 +245,43 @@ footer a {
   padding: 0;
   display: block;
   text-decoration: none;
-  background-color: #fcd670;
 }
 
-.container > .row > .col-9 > .row > .col-4 > img {
+.container > .row > .col-9 > .row > .col-4 > a > img {
   transition: all 1s;
 }
 
-.container > .row > .col-9 > .row > .col-4 > img:hover {
+.container > .row > .col-9 > .row > .col-4 > a > img:hover {
   transform: scale(1.3);
+}
+
+.img-wrap {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.img-overlay {
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.img-wrap img {
+  vertical-align: top;
+  transition: all 1s;
+}
+
+.img-wrap img:hover {
+  transform: scale(1.3);
+}
+
+.icon-hot {
+  position: absolute;
+  width: 50px;
+  line-height: 50px;
+  color: #FFF;
+  border-radius: 100%;
+  left: -25px;
+  top: -25px;
+  background-color: #ff3300;
 }
