--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,29 +21,23 @@ header {
   background-color: #cbf9ff;
 }
 
-header > div > h1 {
+header > .container > h1 {
   padding-top: 10px;
   padding-left: 30px;
   color: #8d4311;
 }
 
-header > div > h1 > a {
+header > .container > h1 > a {
   text-decoration: none;
   color: #8d4311;
 }
 
-header > div > nav > ul {
+header > .container > nav > ul {
   display: flex;
   justify-content: center;
 }
 
-header > div > nav > ul > li {
-  margin: 25px;
-  border-radius: 10px;
-  border: 1px solid black;
-}
-
-header > div > nav > ul > li > a {
+header > .container > nav > ul > li > a {
   display: block;
   padding: 5px;
   text-decoration: none;
@@ -51,18 +45,29 @@ header > div > nav > ul > li > a {
   color: #8d4311;
   font-size: 1.2em;
   letter-spacing: 2px;
-  border-radius: 10px;
   text-align: center;
   box-sizing: border-box;
-  box-shadow: 2px 2px 3px #636363;
   font-weight: 800;
 }
 
-header > div > nav > ul > li > a:hover {
+header > .container > nav > ul > li > a:hover {
   background-color: #7c93fa;
   color: aliceblue;
 }
 
+@media (min-width: 768px) {
+  header > .container > nav > ul > li {
+    margin: 25px;
+    border-radius: 10px;
+    border: 1px solid black;
+  }
+
+  header > .container > nav > ul > li > a {
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 3px #636363;
+  }
+}
 .container > h2 {
   color: #8d4311;
   text-align: center;
@@ -88,25 +93,224 @@ header > div > nav > ul > li > a:hover {
   flex-wrap: wrap;
 }
 
+.col-1 {
+  --num: calc(12 / 1);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-2 {
+  --num: calc(12 / 2);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
 .col-3 {
-  width: calc(100% / 4 - 30px);
+  --num: calc(12 / 3);
+  width: calc(100% / var(--num) - 30px);
   margin: 0px 15px 40px 15px;
 }
 
 .col-4 {
-  width: calc(100% / 3 - 30px);
+  --num: calc(12 / 4);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-5 {
+  --num: calc(12 / 5);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-6 {
+  --num: calc(12 / 6);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-7 {
+  --num: calc(12 / 7);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-8 {
+  --num: calc(12 / 8);
+  width: calc(100% / var(--num) - 30px);
   margin: 0px 15px 40px 15px;
 }
 
 .col-9 {
-  width: calc(100% / 1.333333333 - 30px);
+  --num: calc(12 / 9);
+  width: calc(100% / var(--num) - 30px);
   margin: 0px 15px 40px 15px;
 }
 
-.col-4 > p > a {
-  text-decoration: none;
+.col-10 {
+  --num: calc(12 / 10);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
 }
 
+.col-11 {
+  --num: calc(12 / 11);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-12 {
+  --num: calc(12 / 12);
+  width: calc(100% / var(--num) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+@media (min-width: 768px) {
+  .col-md-1 {
+    --num: calc(12 / 1);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-2 {
+    --num: calc(12 / 2);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-3 {
+    --num: calc(12 / 3);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-4 {
+    --num: calc(12 / 4);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-5 {
+    --num: calc(12 / 5);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-6 {
+    --num: calc(12 / 6);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-7 {
+    --num: calc(12 / 7);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-8 {
+    --num: calc(12 / 8);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-9 {
+    --num: calc(12 / 9);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-10 {
+    --num: calc(12 / 10);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-11 {
+    --num: calc(12 / 11);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-md-12 {
+    --num: calc(12 / 12);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+}
+@media (min-width: 1200px) {
+  .col-lg-1 {
+    --num: calc(12 / 1);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-2 {
+    --num: calc(12 / 2);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-3 {
+    --num: calc(12 / 3);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-4 {
+    --num: calc(12 / 4);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-5 {
+    --num: calc(12 / 5);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-6 {
+    --num: calc(12 / 6);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-7 {
+    --num: calc(12 / 7);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-8 {
+    --num: calc(12 / 8);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-9 {
+    --num: calc(12 / 9);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-10 {
+    --num: calc(12 / 10);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-11 {
+    --num: calc(12 / 11);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+
+  .col-lg-12 {
+    --num: calc(12 / 12);
+    width: calc(100% / var(--num) - 30px);
+    margin: 0px 15px 40px 15px;
+  }
+}
 .title a {
   color: brown;
   font-size: 1.3em;
@@ -283,4 +487,128 @@ footer a {
   left: -25px;
   top: -25px;
   background-color: #ff3300;
+}
+
+@media (min-width: 768px) {
+  .icon-menu {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  h1 {
+    background-color: #80f6ff;
+    float: left;
+  }
+
+  .icon-menu {
+    float: right;
+    width: 15%;
+    display: block;
+    background-color: #8d4311;
+    color: #000;
+    line-height: 60px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  header > .container > nav {
+    width: 100%;
+    float: left;
+    display: none;
+  }
+
+  header > .container > nav.active {
+    display: block;
+  }
+
+  header > .container > nav > ul {
+    display: block;
+  }
+
+  header > .container > nav > ul > li {
+    width: 100%;
+  }
+
+  .overflow-hidden {
+    overflow: hidden;
+  }
+}
+.fz-1 {
+  font-size: 1em;
+}
+
+.fz-2 {
+  font-size: 2em;
+}
+
+.fz-3 {
+  font-size: 3em;
+}
+
+.fz-4 {
+  font-size: 4em;
+}
+
+.fz-5 {
+  font-size: 5em;
+}
+
+.col-1 {
+  width: calc(100% / calc(12 / 1) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-2 {
+  width: calc(100% / calc(12 / 2) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-3 {
+  width: calc(100% / calc(12 / 3) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-4 {
+  width: calc(100% / calc(12 / 4) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-5 {
+  width: calc(100% / calc(12 / 5) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-6 {
+  width: calc(100% / calc(12 / 6) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-7 {
+  width: calc(100% / calc(12 / 7) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-8 {
+  width: calc(100% / calc(12 / 8) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-9 {
+  width: calc(100% / calc(12 / 9) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-10 {
+  width: calc(100% / calc(12 / 10) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-11 {
+  width: calc(100% / calc(12 / 11) - 30px);
+  margin: 0px 15px 40px 15px;
+}
+
+.col-12 {
+  width: calc(100% / calc(12 / 12) - 30px);
+  margin: 0px 15px 40px 15px;
 }
