--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,6 +311,10 @@ header > .container > nav > ul > li > a:hover {
     margin: 0px 15px 40px 15px;
   }
 }
+.order-md-1 {
+  order: -1;
+}
+
 .title a {
   color: brown;
   font-size: 1.3em;
@@ -551,64 +555,4 @@ footer a {
 
 .fz-5 {
   font-size: 5em;
-}
-
-.col-1 {
-  width: calc(100% / calc(12 / 1) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-2 {
-  width: calc(100% / calc(12 / 2) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-3 {
-  width: calc(100% / calc(12 / 3) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-4 {
-  width: calc(100% / calc(12 / 4) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-5 {
-  width: calc(100% / calc(12 / 5) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-6 {
-  width: calc(100% / calc(12 / 6) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-7 {
-  width: calc(100% / calc(12 / 7) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-8 {
-  width: calc(100% / calc(12 / 8) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-9 {
-  width: calc(100% / calc(12 / 9) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-10 {
-  width: calc(100% / calc(12 / 10) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-11 {
-  width: calc(100% / calc(12 / 11) - 30px);
-  margin: 0px 15px 40px 15px;
-}
-
-.col-12 {
-  width: calc(100% / calc(12 / 12) - 30px);
-  margin: 0px 15px 40px 15px;
 }
