--- a/pug/about-us.pug
+++ b/pug/about-us.pug
@@ -24,56 +24,18 @@ html(lang='en')
               a(href='#') 連絡作者
     // ===============頁首結尾==========================
     // =====================content start===================================
-    section.S1.container
-      p.breadcrumb
-        a(href='index.html') 首頁
-        span &nbsp; &gt; &nbsp;
-        a(href='design-list.html') 平面作品
-    section.S2
-      .container
-        .leftbox.col-12.col-md-9
-          dl
-            dt
-              a(href='#') 類別01
-            dt
-              a(href='#') 類別02
-            dt
-              a(href='#') 類別03
-            dt
-              a(href='#') 類別04
-        .rightbox.col-12.col-md-3
-          h2 作品一覽
-          .row
-            .col-12.col-md-4
-              a(href='')
+    .container 
+        .row 
+            .col-12 
+                h2 關於作者
+        .row 
+            .col-12.col-md-6
                 img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題01
-              p.date.text-center 2022-06-16
-            .col-12.col-md-4
-              a(href='')
+            .col-12.col-md-6 02
+        .row 
+            .col-12.col-md-6
                 img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題02
-              p.date.text-center 2022-06-16
-            .col-12.col-md-4
-              a(href='')
-                img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題03
-              p.date.text-center 2022-06-16
-            .col-12.col-md-4
-              a(href='')
-                img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題04
-              p.date.text-center 2022-06-16
-            .col-12.col-md-4
-              a(href='')
-                img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題05
-              p.date.text-center 2022-06-16
-            .col-12.col-md-4
-              a(href='')
-                img.img-fluid.img-rounded(src='https://placekitten.com/150/150', alt='')
-              p.title.text-center 標題06
-              p.date.text-center 2022-06-16
+            .col-12.col-md-6.order-md-1 02
     // =====================content end===================================
     // =====================footer start===================================
     footer
